--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.lima</groupId>
-    <artifactId>contador</artifactId>
+    <artifactId>counter</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>contador</name>
+    <name>counter</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -128,7 +128,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.lima.contador/com.lima.contador.HelloApplication
+                            <mainClass>com.lima.counter/com.lima.counter.HelloApplication
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
